deploy/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: kubeissuer-wp
    kubernetes.io/ingress.class: nginx
  name: kube-certs-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - mi-k8s.rt.gw
    secretName: tls-wp

  rules:
  - host: mi-k8s.rt.gw
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
